plugins {
    id 'net.fabricmc.fabric-loom' version "${loom_version}"
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = "${project.archives_base_name}-mc${project.minecraft_version}"
}

repositories {
    maven { url = "https://maven.terraformersmc.com/releases/"; name = "TerraformersMC" } // modmenu
    maven { url = "https://maven.wispforest.io"; name = "Wispforest" } // owo-lib
    maven { url = "https://jitpack.io"; name = "JitPack" } // owo-lib
    maven { url = "https://maven.nucleoid.xyz/"; name = "Nucleoid" } // placeholder-api
    maven { url = "https://api.modrinth.com/maven"; name = "Modrinth" } // others
}

loom {
    accessWidenerPath = file("src/main/resources/fzmm.accesswidener")
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"

    // Dependencies
    // Fabric API
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

    def fabricDependencies = [
            'fabric-command-api-v2',
            'fabric-events-interaction-v0',
            'fabric-item-api-v1',
            'fabric-creative-tab-api-v1',
            'fabric-key-mapping-api-v1',
            'fabric-resource-loader-v1',
            'fabric-object-builder-api-v1',
            'fabric-renderer-api-v1'
    ]

    fabricDependencies.forEach {
        implementation(fabricApi.module(it, project.fabric_api_version))
    }

    // owo lib
    implementation annotationProcessor ("io.wispforest:owo-lib:${project.owo_version}")

    // include this if you don't want force your users to install owo
    // sentinel will warn them and give the option to download it automatically
    include "io.wispforest:owo-sentinel:${project.owo_version}"

    // Mod Menu
    implementation "com.terraformersmc:modmenu:${project.modmenu_version}"

    // PlacerholderAPI
    implementation(include("eu.pb4:placeholder-api:${project.placeholder_api_version}"))

    // Optional dependencies
    // Symbol chat
    implementation "maven.modrinth:symbol-chat:${project.symbol_chat_version}"
    implementation "maven.modrinth:reconfigure:${project.symbol_chat_reconfigure_version}"

    // Test dependencies (disabled because it needs support for Java 25)
//    testImplementation "net.fabricmc:fabric-loader-junit:${project.loader_version}"
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": inputs.properties.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
}

java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

jar {
    inputs.property "archivesName", project.base.archivesName

    from("LICENSE") {
        rename { "${it}_${inputs.properties.archivesName}"}
    }
}

test {
//    useJUnitPlatform() //disabled because it needs support for Java 25
    failOnNoDiscoveredTests = false
}

publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }

    repositories {

    }
}